# FolioStack-

./: $null  README.md  index.html  package-lock.json  package.json  railway.toml  vite.config.ts
designer-portfolio/: .dockerignore  .env.convex  .env.example  .gitignore  .railwayignore  ALTERNATIVE_DEPLOYMENT.md  ARCHITECTURE.md  AUTH_GUIDE.md  CLONE_SETUP.md  CONEX_CUSTOM_DOMAIN_FIX.md  DATABASE_DESIGN.md  DATABASE_DESIGN_DOCUMENT.md  DEPLOYMENT.md  DEPLOYMENT_SECURITY.md  DIAGNOSTICS.md  Dockerfile  FOLIOSTACK_SPEC.md  FULLSTACK_DEPLOYMENT.md  GITHUB_CONVEX_SETUP.md  MCP_CONFIG.md  PORTFOLIO_BACKEND_FUNCTIONS.md  README.md  README_SERVER.md  SPEC.md  UPLOAD_FEATURE_GUIDE.md  VERCEL_DEPLOY_GUIDE.md  ai-generate.html  ai-settings.html  analytics.html  check_db.cjs  check_db.js  check_db_status.cjs  check_users.js  clone-website.html  convex.json  dashboard.html  database_data.sql  database_indexes.sql  database_init.sql  database_tables.sql  (+62 more)
designer-portfolio/.railway/: project.json
designer-portfolio/convex/: analytics.ts  auth.ts  http.ts  schema.ts  users.ts  utils.ts  works.ts
designer-portfolio/data/: portfolio.db  users.json  works.json
designer-portfolio/designer-portfolio (2)/: index.html
designer-portfolio/js/: api-config.js  convex-client.js  convex-integration.js  global-ai-config.js
designer-portfolio/k8s/: backend.yaml  frontend.yaml
designer-portfolio/server/: .env.example  Dockerfile  advanced-crawler.js  api-docs.json  api-server.js  auth-server-v2.js  (+30 more)
designer-portfolio/wasm/upload-wasm/: Cargo.toml  build.bat
src/: App.tsx  index.css
(+91 files in other folders)
