[package]
name = "upload-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Designer Portfolio Team"]
description = "High-performance file upload engine in Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
sha2 = "0.10.8"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
lto = true